# edge-ai-suites

./: .gitmodules
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: industrial-edge-insights-time-series-pull-request.yml  industrial-edge-insights-time-series-scans.yml
education-ai-suite/: .gitignore
education-ai-suite/smart-classroom/: README.md  config.yaml  requirements.txt
health-and-life-sciences-ai-suite/: README.md
health-and-life-sciences-ai-suite/multi_modal_patient_monitoring/: README.md  docker-compose.yaml
manufacturing-ai-suite/industrial-edge-insights-multimodal/: .env  .gitignore  CHANGELOG.md  Makefile  docker-compose.yml  third-party-programs.txt
manufacturing-ai-suite/industrial-edge-insights-time-series/: .env  .gitignore  CHANGELOG.md  Makefile  README-dockerhub.md  README.md  docker-compose.yml  third-party-programs.txt
manufacturing-ai-suite/industrial-edge-insights-vision/: .env  .env_pcb-anomaly-detection  .env_weld-porosity  .env_worker-safety-gear-detection  sample_list.sh  sample_start.sh  sample_status.sh  sample_stop.sh  setup.sh
metro-ai-suite/deterministic-threat-detection/: README.md
metro-ai-suite/image-based-video-search/: .env  compose.yml
metro-ai-suite/live-video-analysis/live-video-captioning-rag/app/: Dockerfile  pyproject.toml
metro-ai-suite/metro-sdk-manager/: AGENTS.md  README.md
metro-ai-suite/metro-vision-ai-app-recipe/: .env
metro-ai-suite/smart-route-planning-agent/: .gitignore
metro-ai-suite/smart-traffic-intersection-agent/: setup.sh
(+512 files in other folders)
