[project]
name = "live-video-rag"
version = "0.1.0"
description = "Live Video RAG with FastAPI backend and context from Live-Video-Captioning sample application"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.128.0",
    "langchain-core==1.2.28",
    "langchain-community==0.3.31",
    "langchain-huggingface==1.2.0",
    "langchain-vdms==0.2.0",
    "transformers==4.53.3",
    "uvicorn==0.40.0",
    "optimum[openvino,nncf]==2.1.0",
    "torch==2.8.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend", "main"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
